fix horizontal overflow

--- a/src/templates/blogTemplate.scss
+++ b/src/templates/blogTemplate.scss
@@ -167,7 +167,7 @@
 
     a {
       display: inline-block;
-      margin: $spacing-unit;
+      padding: 0 $spacing-unit;
       line-height: 1.5;
       vertical-align: middle;
       text-decoration: none;
